[package]
name = "bing-wallpaper"
version = "0.1.0"
authors = ["jtcheng <jtcheng@cqu.edu.cn>"]
edition = "2021"

[[bin]]
name = "bwp"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
